(especially a random portion of some other header).  The desired header
name is now explicitly searched in the overview information.

=item *

Fixed the source which is logged to the F<news> log file for local
postings when the local server is not listed in F<incoming.conf>.
A wrong name was used, taken amongst known peers.  The source is now
logged as C<localhost>.

=item *

The check on cancel messages when I<verifycancels> is set to true
in F<inn.conf> has been changed to verify that at least one newsgroup
in the cancel message can be found in the article to be cancelled.
This new feature is from Christopher Biedl.

The previous behaviour was to check whether the cancel message is
from the same person as the original post, which is extremely easy
to spoof; besides, RFC 5537 (USEPRO) mentions that "cancel control
messages are not required to contain From: and Sender: header fields
matching the target message.  This requirement only encouraged cancel
issuers to conceal their identity and provided no security".

=item *

The way the C</remember/> line in F<expire.ctl> works has changed.
History retention for an article was done according to its original
arrival time; it is now according to its original posting date.
Otherwise, unnecessary data may be kept too long in the F<history>
file.

To achieve that, the HISremember() function in history API now
expects a fourth parameter:  the article posting time.

Note that article expiration has not changed and is still based
on arrival time, unless the B<-p> flag is passed to B<expire>
or B<expireover>, in which case posting time is used.

=item *

The default value for C</remember/> has changed from C<10> to C<11>
because it should be one more than the I<artcutoff> parameter
in F<inn.conf>, so that articles posted one day into the future
are properly retained in history.

=item *

A new B<-L> flag has been added by Jonathan Kamens to B<makehistory>